--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.21",
+    "@expo-google-fonts/inter": "^0.2.0",
+    "@expo-google-fonts/roboto": "^0.2.0",
+    "@expo-google-fonts/work-sans": "^0.2.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-picker/picker": "1.16.1",
     "@react-navigation/bottom-tabs": "^5.11.11",
@@ -16,6 +19,8 @@
     "@react-navigation/stack": "^5.14.5",
     "@reduxjs/toolkit": "^1.6.1",
     "expo": "~42.0.1",
+    "expo-app-loading": "^1.1.2",
+    "expo-font": "~9.2.1",
     "expo-status-bar": "~1.0.4",
     "graphql": "^15.5.1",
     "react": "16.13.1",
